add documentation to folowing endpoints: get asll tasks, update task status, delete task and filter task by status
